syntax = "proto3";

package com.academy.fintech.application;

option java_multiple_files = true;

service ApplicationService{
  rpc Create(ApplicationCreationRequest) returns (ApplicationCreationResponse) {}
  rpc Cancel(ApplicationCancellationRequest) returns (ApplicationCancellationResponse) {}
}

message ApplicationCreationRequest{
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  int32 salary = 4;
  int32 disbursementAmount = 5;
}

message ApplicationCreationResponse{
  string applicationId = 1;
}

message ApplicationCreationError{
  string existingApplicationId = 1;
}

message ApplicationCancellationRequest{
  string applicationId = 1;
}

message ApplicationCancellationResponse{
}

message ApplicationCancellationError{
  string message = 1;
}

// Request Path
//com.academy.fintech.application.ApplicationService/Create